--- a/print.html
+++ b/print.html
@@ -11958,44 +11958,18 @@ fn main() {}
 <p>回想一下 <code>search</code> 函式的目的是要回傳 <code>contents</code> 中所有包含 <code>query</code> 的行數。類似於範例 13-19 的 <code>filter</code> 範例，此程式碼使用 <code>filter</code> 配接器來只保留 <code>line.contains(query)</code> 回傳爲 <code>true</code> 的行數。我們接著就可以用 <code>collect</code> 收集符合的行數成另一個向量。這樣簡單多了！你也可以對 <code>search_case_insensitive</code> 函式使用疊代器方法做出相同的改變。</p>
 <p>接下來的邏輯問題是在你自己的程式碼中你應該與爲何要使用哪種風格呢：是要原本範例 13-28 的程式碼，還是範例 13-29 使用疊代器的版本呢？大多數的 Rust 程式設計師傾向於使用疊代器。一開始的確會有點難上手，不過一旦你熟悉各種疊代配接器與它們的用途後，疊代器就會很好理解了。不同於用迴圈迂迴處理每一步並建構新的向量，疊代器能更專注在迴圈的高階抽象上。這能抽象出常見的程式碼，並能更容易看出程式碼中的重點部位，比如疊代器中每個元素要過濾的條件。</p>
 <p>但是這兩種實作真的完全相等嗎？你的直覺可能會假設低階的迴圈可能更快些。讓我們來討論效能吧。</p>
-<h2><a class="header" href="#comparing-performance-loops-vs-iterators" id="comparing-performance-loops-vs-iterators">Comparing Performance: Loops vs. Iterators</a></h2>
-<p>To determine whether to use loops or iterators, you need to know which version
-of our <code>search</code> functions is faster: the version with an explicit <code>for</code> loop or
-the version with iterators.</p>
-<p>We ran a benchmark by loading the entire contents of <em>The Adventures of
-Sherlock Holmes</em> by Sir Arthur Conan Doyle into a <code>String</code> and looking for the
-word <em>the</em> in the contents. Here are the results of the benchmark on the
-version of <code>search</code> using the <code>for</code> loop and the version using iterators:</p>
+<h2><a class="header" href="#比較效能迴圈-vs-疊代器" id="比較效能迴圈-vs-疊代器">比較效能：迴圈 vs. 疊代器</a></h2>
+<p>爲了決定該使用迴圈還是疊代器，你需要知道哪個 <code>search</code> 函式的版本比較快：是顯式 <code>for</code> 迴圈的版本，還是疊代器的版本。</p>
+<p>我們可以透過讀取整本 Sir Arthur Conan Doyle 寫的 <em>The Adventures of Sherlock Holmes</em> 到 <code>String</code> 中並搜尋內容中的 <em>the</em> 來進行評測。以下爲針對 <code>search</code> 函式使用 <code>for</code> 迴圈與使用疊代器的版本評測（benchmark）：</p>
 <pre><code class="language-text">test bench_search_for  ... bench:  19,620,300 ns/iter (+/- 915,700)
 test bench_search_iter ... bench:  19,234,900 ns/iter (+/- 657,200)
 </code></pre>
-<p>The iterator version was slightly faster! We won’t explain the benchmark code
-here, because the point is not to prove that the two versions are equivalent
-but to get a general sense of how these two implementations compare
-performance-wise.</p>
-<p>For a more comprehensive benchmark, you should check using various texts of
-various sizes as the <code>contents</code>, different words and words of different lengths
-as the <code>query</code>, and all kinds of other variations. The point is this:
-iterators, although a high-level abstraction, get compiled down to roughly the
-same code as if you’d written the lower-level code yourself. Iterators are one
-of Rust’s <em>zero-cost abstractions</em>, by which we mean using the abstraction
-imposes no additional runtime overhead. This is analogous to how Bjarne
-Stroustrup, the original designer and implementor of C++, defines
-<em>zero-overhead</em> in “Foundations of C++” (2012):</p>
+<p>疊代器版本竟然比較快一些！我們在此不會解釋評測的程式碼，因爲這裡的重點不再於證明這兩種版本是一樣快的，而是要理解這兩種實作對效能的影響。</p>
+<p>要做更全面的評測的話，你應該要檢查使用不同大小的不同文字來作爲 <code>contents</code>、不同單字與不同長度來作爲 <code>query</code>，以及所有各式各樣的可能性。這邊的重點在於：疊代器雖然是高階抽象，但其編譯出來的程式碼與你親自寫出低階的程式碼幾乎相同。疊代器是 Rust 其中一種<em>零成本抽象（zero-cost abstractions）</em> ，這指的是使用的抽象不會在執行時有額外的開銷。這是 C++ 的初始設計暨實作者 Bjarne Stroustrup 在 <em>Foundations of C++” (2012) 書中所定義的</em>零開銷（zero-overhead）* 的概念：</p>
 <blockquote>
-<p>In general, C++ implementations obey the zero-overhead principle: What you
-don’t use, you don’t pay for. And further: What you do use, you couldn’t hand
-code any better.</p>
+<p>大致上來說，C++ 的實作遵守著零開銷的原則：你沒有使用到的話，你就不必買單。而且你有使用到的話，你不可能在寫出更好的程式碼。</p>
 </blockquote>
-<p>As another example, the following code is taken from an audio decoder. The
-decoding algorithm uses the linear prediction mathematical operation to
-estimate future values based on a linear function of the previous samples. This
-code uses an iterator chain to do some math on three variables in scope: a
-<code>buffer</code> slice of data, an array of 12 <code>coefficients</code>, and an amount by which
-to shift data in <code>qlp_shift</code>. We’ve declared the variables within this example
-but not given them any values; although this code doesn’t have much meaning
-outside of its context, it’s still a concise, real-world example of how Rust
-translates high-level ideas to low-level code.</p>
+<p>作爲另一個例子，以下程式碼是音訊解碼器的其中一個段落。解碼演算碼使用線性預測數學運算，並依據之前樣本的線性函式來預估未來的數值。此程式碼使用一連串的疊代器來對作用域中的三個變數進行數學運算：資料切片 <code>buffer</code>、長度爲 12 的 <code>coefficients</code> 陣列以及要偏移的數量 <code>qlp_shift</code>。我們在範例中宣告變數但沒有給予任何數值，雖然只看此程式碼的確沒有什麼意義，但是這仍然是個現實世界中的其中一個簡例，可以來看出 Rust 如何將高階的想法轉換成低階的程式碼。</p>
 <pre><code class="language-rust ignore">let buffer: &amp;mut [i32];
 let coefficients: [i64; 12];
 let qlp_shift: i16;
@@ -12009,35 +11983,12 @@ for i in 12..buffer.len() {
     buffer[i] = prediction as i32 + delta;
 }
 </code></pre>
-<p>To calculate the value of <code>prediction</code>, this code iterates through each of the
-12 values in <code>coefficients</code> and uses the <code>zip</code> method to pair the coefficient
-values with the previous 12 values in <code>buffer</code>. Then, for each pair, we
-multiply the values together, sum all the results, and shift the bits in the
-sum <code>qlp_shift</code> bits to the right.</p>
-<p>Calculations in applications like audio decoders often prioritize performance
-most highly. Here, we’re creating an iterator, using two adaptors, and then
-consuming the value. What assembly code would this Rust code compile to? Well,
-as of this writing, it compiles down to the same assembly you’d write by hand.
-There’s no loop at all corresponding to the iteration over the values in
-<code>coefficients</code>: Rust knows that there are 12 iterations, so it “unrolls” the
-loop. <em>Unrolling</em> is an optimization that removes the overhead of the loop
-controlling code and instead generates repetitive code for each iteration of
-the loop.</p>
-<p>All of the coefficients get stored in registers, which means accessing the
-values is very fast. There are no bounds checks on the array access at runtime.
-All these optimizations that Rust is able to apply make the resulting code
-extremely efficient. Now that you know this, you can use iterators and closures
-without fear! They make code seem like it’s higher level but don’t impose a
-runtime performance penalty for doing so.</p>
-<h2><a class="header" href="#summary" id="summary">Summary</a></h2>
-<p>Closures and iterators are Rust features inspired by functional programming
-language ideas. They contribute to Rust’s capability to clearly express
-high-level ideas at low-level performance. The implementations of closures and
-iterators are such that runtime performance is not affected. This is part of
-Rust’s goal to strive to provide zero-cost abstractions.</p>
-<p>Now that we’ve improved the expressiveness of our I/O project, let’s look at
-some more features of <code>cargo</code> that will help us share the project with the
-world.</p>
+<p>要計算 <code>prediction</code> 的數值的話，此程式碼會遍歷 <code>coefficients</code> 的 12 個數值並使用 <code>zip</code> 方法將係數數值與 <code>buffer</code> 中之前 12 個數值做配對。然後在每個配對中，我們將數值相乘，然後相加所有結果，最後對總和往右偏移 <code>qlp_shift</code> 位。</p>
+<p>像音訊解碼器這種的應用程式運算通常最注重效率。我們在此建立了一個疊代器，使用兩個配接器，然後消化數值。這段 Rust 程式碼會產生什麼樣的組合語言程式碼呢？在本書撰寫時，它會編譯出與你自己手寫一樣的組合語言。遍歷 <code>coefficients</code> 的數值完全不需用到迴圈：Rust 知道一共有 12 次疊代，所以它會「展開（unroll）」迴圈。<em>展開</em>是一種優化方式，這會移除迴圈控制程式碼並改產生針對迴圈中每次疊代的重複程式碼。</p>
+<p>所有的係數都會存在暫存器中，這意味著存取數值會非常地快。在執行時不會有對陣列的界限檢查。這些所有 Rust 能做的優化讓產生的程式碼可以十分迅速。現在既然你已經知道了，你就可以自在地使用疊代器與閉包！它們可以寫出高階的程式碼，但不會犧牲執行時的效能。</p>
+<h2><a class="header" href="#總結-12" id="總結-12">總結</a></h2>
+<p>閉包與疊代是是 Rust 啟發自函式程式語言的概念。它們讓 Rust 在表達高階概念的同時，仍能擁有低階程式碼的效能。閉包與疊代器的實作對執行時效能不會有影響。這是 Rust 竭力提供零成本抽象的目標之一。</p>
+<p>現在我們改善了 I/O 專案的可讀性，讓我們看看 <code>cargo</code> 一些更多的功能，來幫助我們分享專案給全世界。</p>
 <h1><a class="header" href="#更多關於-cargo-與-cratesio-的內容" id="更多關於-cargo-與-cratesio-的內容">更多關於 Cargo 與 Crates.io 的內容</a></h1>
 <p>目前我們只使用了 Cargo 最基本的功能來建構、執行與測試我們的程式碼，但它還能做更多事。在本章節中我們將討論這些其他的進階功能，你將瞭解如何做到以下動作：</p>
 <ul>
@@ -12648,7 +12599,7 @@ cargo install something you don't have, copy relevant output below
 </blockquote>
 <h2><a class="header" href="#透過自訂命命來擴展-cargo-的功能" id="透過自訂命命來擴展-cargo-的功能">透過自訂命命來擴展 Cargo 的功能</a></h2>
 <p>Cargo 的設計能讓你在不用修改 Cargo 的情況下擴展新的子命令。如果你 <code>$PATH</code> 中有任何叫做 <code>cargo-something</code> 的二進制檔案，你就可以用像是執行 Cargo 子命令的方式 <code>cargo something</code> 來執行它。像這樣的自訂命令在你執行 <code>cargo --list</code> 時也會顯示出來。能夠透過 <code>cargo install</code> 來安裝擴展插件並有如內建 Cargo 工具般來執行使用是 Cargo 設計上的一大方便優勢！</p>
-<h2><a class="header" href="#總結-12" id="總結-12">總結</a></h2>
+<h2><a class="header" href="#總結-13" id="總結-13">總結</a></h2>
 <p>透過 Cargo 與 <a href="https://crates.io/">crates.io</a><!-- ignore --> 分享程式碼是讓 Rust 生態系統能適用於許多不同任務的重要部分之一。Rust 的標準函式庫既小又穩定，但是 crate 可以很容易地分享、使用，並在語言本身不同的時間線來進行改善。千萬別吝嗇於分享你認爲實用的程式碼到 <a href="https://crates.io/">crates.io</a><!-- ignore -->，其他人可能也會覺得它很有幫助！</p>
 <blockquote>
 <ul>
@@ -14019,7 +13970,7 @@ children: RefCell { value: [] } }] } })
 <p>當內部作用域結束時，<code>branch</code> 會離開作用域且 <code>Rc&lt;Node&gt;</code> 的強計數會歸零，所以它的 <code>Node</code> 就會被釋放。<code>leaf.parent</code> 的弱計數 1 與 <code>Node</code> 是否被釋放無關，所以我們沒有產生任何記憶體泄漏！</p>
 <p>如果我們嘗試在作用域結束後取得 <code>leaf</code> 的父節點，我們會再次獲得 <code>None</code>。在程式的最後，<code>leaf</code> 的 <code>Rc&lt;Node&gt;</code> 強計數爲 1 且弱計數爲 0，因爲變數 <code>leaf</code> 現在是 <code>Rc&lt;Node&gt;</code> 唯一的引用。</p>
 <p>所有管理計數與數值釋放都已經實作在 <code>Rc&lt;T&gt;</code> 與 <code>Weak&lt;T&gt;</code>，它們都有 <code>Drop</code> 特的實作。在 <code>Node</code> 的定義中指定子節點對父節點的關係應爲 <code>Weak&lt;T&gt;</code> 引用，讓你能夠將父節點與子節點彼此關聯，且不必擔心產生引用循環與記憶體泄漏。</p>
-<h2><a class="header" href="#總結-13" id="總結-13">總結</a></h2>
+<h2><a class="header" href="#總結-14" id="總結-14">總結</a></h2>
 <p>本章節涵蓋了如何使用智慧指標來得到一些不同於 Rust 預設引用所帶來的保障以及取捨。<code>Box&lt;T&gt;</code> 型別有已知大小並能將資料分配到堆積上。<code>Rc&lt;T&gt;</code> 型別會追蹤堆積上資料的引用數量，讓該資料能有數個擁有者。<code>RefCell&lt;T&gt;</code> 型別具有內部可變性，提供一個外部不可變的型別，但有方法可以改變內部數值，其會在執行時強制檢測借用規則，而非編譯時。</p>
 <p>我們也討論了 <code>Deref</code> 與 <code>Drop</code> 特徵，這些對智慧指標提供了許多功能。我們探討了引用循環可能會導致記憶體泄漏以及如何使用 <code>Weak&lt;T&gt;</code> 避免它們。</p>
 <p>如果本章節引起你的興趣，讓你想要實作你自己的智慧指標的話，歡迎查閱<a href="../nomicon/index.html">「The Rustonomicon」</a>來學習更多實用資訊。</p>
@@ -14725,7 +14676,7 @@ changes in the compiler -->
 <h3><a class="header" href="#手動實作-send-與-sync-是不安全的" id="手動實作-send-與-sync-是不安全的">手動實作 <code>Send</code> 與 <code>Sync</code> 是不安全的</a></h3>
 <p>因爲由具有 <code>Send</code> 與 <code>Sync</code> 的型別組成的型別自動就會有 <code>Send</code> 與 <code>Sync</code>，我們不需要親自實作這些特徵。至於標記特徵，它們甚至沒有任何方法需要實作。它們只是用於強制確保並行相關的不變性。</p>
 <p>要手動實作這些特徵會需要實作不安全（unsafe）的 Rust 程式碼。我們會在第十九章討論如何使用不安全的 Rust 程式碼，現在最重要的資訊是要從不具有 <code>Send</code> 與 <code>Sync</code> 的元件來組成新的並行型別需要格外小心才能確保其安全保障。<a href="https://doc.rust-lang.org/nomicon/index.html">「The Rustonomicon」</a> 有更多關於這些保障與如何維持它們的資訊。</p>
-<h2><a class="header" href="#總結-14" id="總結-14">總結</a></h2>
+<h2><a class="header" href="#總結-15" id="總結-15">總結</a></h2>
 <p>這不會是你在本書中最後一次看到並行程式碼，第二十章的專案將會在更實際的場合中使用本章節的概念，而非這裡討論的簡單範例。</p>
 <p>如之前提過的，因爲 Rust 語言本身很少處理並行的部分，許多並行解決方案都實作成 crate。這些 crate 通常發展的比標準函式庫還快，所以別忘了到線上尋找目前最先進的 crate 來在多執行緒場合中使用喔。</p>
 <p>Rust 標準函式庫提供訊息傳遞的通道與智慧指標，像是 <code>Mutex&lt;T&gt;</code> 與 <code>Arc&lt;T&gt;</code>，能夠在並行環境中安全使用。型別系統與借用檢查器中確保使用這些解決方案的程式碼不會發生資料競爭或是無效引用。一旦你讓你的程式碼能編譯通過後，你可以放心地認定它會開開心心地在多執行緒中執行，並且不會發生任何在其他語言中常見且難以追蹤的程式錯誤。並行程式設計就不再是個令人害怕的概念，無畏無懼地開發並行程式吧！</p>
@@ -15702,7 +15653,7 @@ fn main() {
 <p>我們修改 <code>main</code> 來重新賦值 <code>post</code> 意味著此實作不再遵循物件導向狀態模式了，狀態的轉換不再完全封裝在 <code>Post</code> 實作內部。然而我們得到的好處是的是無效狀態是不可能發生的了，這都多虧了型別系統與編譯時型別檢查！這確保了特定程式錯誤會在進入生產環境前就被察覺，像是顯示尚未發佈的文章內容。</p>
 <p>你可以試試看在範例 17-20 之後，對 <code>blog</code> crate 實作我們在此段落稍早提及的額外需求任務建議，來看看你覺得此版本的程式碼設計如何。注意有些任務很可能在此設計就已經實作完成了。</p>
 <p>我們看到儘管 Rust 能夠實作物件導向設計模式、其他像是將狀態寫入型別系統中的模式在 Rust 中也是可行的。這些模式有不同的取捨。雖然你可能非常熟悉物件導向模式，但重新思考問題，並善用 Rust 的特色可以帶來不少優勢，像是在執行時就避免錯誤發生。物件導向模式在 Rust 中不會永遠是最好的解決方案，因爲 Rust 有像是所有權這樣物件導向語言所沒有的特定功能。</p>
-<h2><a class="header" href="#總結-15" id="總結-15">總結</a></h2>
+<h2><a class="header" href="#總結-16" id="總結-16">總結</a></h2>
 <p>無論你讀完此章後，認爲 Rust 是否屬於物件導向語言，你都知道在 Rust 中你可以使用特徵物件來取得一些物件導向的特色。動態分配能給予你的程式碼更多的彈性，但會犧牲一點執行時效能。你可以使用此彈性來實作物件導向模式，幫助提升程式碼可維護性。Rust 還有其他像是所有權等物件導向語言所沒有的功能。物件導向模式不會永遠是善用 Rust 潛能的最佳方案，不過仍是個不錯的選項。</p>
 <p>接下來，我們要看看模式（patterns），這是 Rust 另一個可以提供大量彈性的功能。我們在書中一路下來簡單看過它們好幾次了，不過我們還沒見識到它們全部的本事。讓我們來探索吧！</p>
 <blockquote>
@@ -16409,7 +16360,7 @@ To learn more, run the command again with --verbose.
 <p>在第二個分支中，我們只有在模式中指定範圍，該分支對應的程式碼就沒有變數能包含 <code>id</code> 欄位的實際數值。<code>id</code> 欄位數值可能是 10、11 或 12，但此模式的程式碼不會知道其值爲何。該模式程式碼無法使用 <code>id</code> 欄位的數值，因爲我們沒有將 <code>id</code> 數值存爲變數。</p>
 <p>在最後一個分支中，我們指定沒有限制範圍的變數，我們有能在分支程式碼中使用的有效變數 <code>id</code>。原因是因爲我們使用了結構體欄位簡寫語法。不過我們在此分支沒有向前兩個條分支進行任何對 <code>id</code> 欄位的測試，任何數值都會配對到此模式。</p>
 <p>使用 <code>@</code> 讓我們能在一個模式中測試數值並將其儲存至變數。</p>
-<h2><a class="header" href="#總結-16" id="總結-16">總結</a></h2>
+<h2><a class="header" href="#總結-17" id="總結-17">總結</a></h2>
 <p>Rust 的模式對於幫助分辨不同種資料來說非常實用。當在 <code>match</code> 表達式中使用時，Rust 確保你的模式有涵蓋所有可能數值，不然你的程式就不會編譯通過。在 <code>let</code> 陳述式與函式參數中的模式使它們的結構更實用，在能夠解構數值成更小部分的同時賦值給變數。我們能夠建立簡單或複雜的模式來滿足我們的需求。</p>
 <p>接下來，在本書的倒數第二章中，我們要來看 Rust 眾多特色中的一些進階部分。</p>
 <blockquote>
@@ -17825,7 +17776,7 @@ pub fn route(attr: TokenStream, item: TokenStream) -&gt; TokenStream {
 pub fn sql(input: TokenStream) -&gt; TokenStream {
 </code></pre>
 <p>這個定義和自訂 derive 巨集簽名相似：我們接受在括號內的標記，並回傳想要產生的程式碼。</p>
-<h2><a class="header" href="#總結-17" id="總結-17">總結</a></h2>
+<h2><a class="header" href="#總結-18" id="總結-18">總結</a></h2>
 <p>呼！現在你的工具箱多了一些 Rust 特色功能，雖然不常用，但在特定情況下你會知道它們存在。我們介紹了許多複雜的主題，所以當你在錯誤訊息或是其他人的程式碼與它們相遇，你會有辦法辨認這些概念和語法。你可以將這章作為能引導找到解法的參考書。</p>
 <p>接下來，我們會動手做另一個專案，實際運用本書所講的一切。</p>
 <blockquote>
@@ -20108,7 +20059,7 @@ impl Worker {
 <li>使用 <code>ThreadPool</code> 來處理其他種類的任務，而不只是網頁請求。</li>
 <li>在 <a href="https://crates.io/">crates.io</a> 找到一個執行緒池 crate，並使用該 crate 實作類似的網頁伺服器。然後比較該 crate 與我們實作的執行緒池之間的 API 與穩固程度。</li>
 </ul>
-<h2><a class="header" href="#總結-18" id="總結-18">總結</a></h2>
+<h2><a class="header" href="#總結-19" id="總結-19">總結</a></h2>
 <p>做得好！你已經讀完整本輸了！我們由衷感謝你一同加入 Rust 的旅途。現在你已經準備好實作你自己的 Rust 專案並協助其他人的專案。別忘了我們有個友善的社群，其他 Rustaceans 會很樂意幫助你一同面對 Rust 旅途中的任何挑戰。</p>
 <blockquote>
 <ul>
